--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,6 @@ img {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-  outline: 2px solid transparent;
 }
 .section {
   padding-top: 120px;
@@ -57,8 +56,7 @@ img {
 /*HEADER */
 .header {
   background-color: var(--color1);
-  padding-top: 24px;
-  padding-bottom: 24px;
+
   border-bottom: 1px solid #e7e9fc;
 }
 .header-container {
@@ -67,6 +65,7 @@ img {
 }
 .header-navigation {
   display: flex;
+  align-items: center;
 }
 .header-logo {
   font-family: "Raleway", sans-serif;
@@ -76,6 +75,8 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--logo-color);
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 .header-studio {
   margin-right: 76px;
@@ -89,6 +90,7 @@ img {
 }
 
 .header-link {
+  display: block;
   padding-top: 24px;
   padding-bottom: 24px;
   color: var(--main-title-color);
@@ -114,6 +116,8 @@ img {
 }
 
 .header-address-item {
+  padding-top: 24px;
+  padding-bottom: 24px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -144,6 +148,10 @@ img {
 }
 .more-btn {
   margin-top: 48px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   color: var(--color1);
   background-color: var(--logo-color);
   border-radius: 4px;
@@ -172,6 +180,7 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--main-title-color);
+  margin-bottom: 8px;
 }
 .benefits-text {
   font-size: 16px;
@@ -211,6 +220,7 @@ img {
   text-align: center;
 }
 .team-item {
+  padding-bottom: 32px;
   width: calc((100%-72px) / 4);
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
@@ -218,20 +228,29 @@ img {
 
   background-color: var(--color1);
 }
-.team-item > img {
-  margin-bottom: 32px;
-}
-.team-item > p {
-  margin-top: 8px;
-  margin-bottom: 32px;
-}
+
 .team-title {
-  text-align: center;
   margin-bottom: 72px;
+  text-align: center;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02e;
+}
+.team-small-title {
+  margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  padding-top: 32px;
+  letter-spacing: 0.02em;
+  color: var(--title-color);
+}
+.team-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--text-color);
 }
 /*FOOTER*/
 .footer {
@@ -267,14 +286,23 @@ img {
 }
 
 /*MENU-PORTFOLIO */
-.menu-container {
+.menu {
   padding-top: 96px;
   padding-bottom: 120px;
 }
 .menu-btn {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  display: flex;
+  letter-spacing: 0.04em;
   color: var(--logo-color);
   background-color: var(--background-color);
+  cursor: pointer;
   border: 1px solid #e7e9fc;
+
   border-radius: 4px;
   padding: 12px 24px;
 }
@@ -291,37 +319,39 @@ img {
 }
 
 /*PIC-PORTFOLIO*/
+
+.portfolio-container {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 16px;
+  border-right: 1px solid #e7e9fc;
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+}
 .pic-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 48px 24px;
 }
 .pic-link {
   display: block;
 }
 .pic-item {
-  width: calc(100% / 3-48px);
-  margin-right: 24px;
-  margin-bottom: 48px;
-  border-right: 1px solid #e7e9fc;
-  border-bottom: 1px solid #e7e9fc;
-  border-left: 1px solid #e7e9fc;
-}
-.pic-item.pic-item:nth-child(3n) {
-  margin-right: 0;
+  width: calc((100% - 48px) / 3);
 }
 
 .pic-title {
-  padding-top: 32px;
   margin-bottom: 8px;
-  width: 360px;
+
+  font-weight: 500;
+
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--title-color);
 }
 .pic-text {
-  padding-bottom: 32px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
