--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,6 @@ img {
   padding-bottom: 24px;
 }
 .header-studio {
-  margin-right: 76px;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
@@ -103,6 +102,7 @@ img {
   color: var(--main-color);
 }
 .header-list {
+  margin-left: 76px;
   display: flex;
   gap: 40px;
 }
@@ -116,6 +116,7 @@ img {
 }
 
 .header-address-item {
+  display: block;
   padding-top: 24px;
   padding-bottom: 24px;
   font-weight: 400;
@@ -221,7 +222,7 @@ img {
 }
 .team-item {
   padding-bottom: 32px;
-  width: calc((100%-72px) / 4);
+  width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -238,11 +239,12 @@ img {
   letter-spacing: 0.02e;
 }
 .team-small-title {
+  margin-top: 32px;
   margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
-  padding-top: 32px;
+
   letter-spacing: 0.02em;
   color: var(--title-color);
 }
@@ -309,6 +311,7 @@ img {
 .menu-btn:is(:hover, :focus) {
   background-color: var(--main-color);
   color: var(--color1);
+  border: transparent;
 }
 
 .menu-list {
